# TauCOM

./: .gitignore  CMakeLists.txt  conandata.yml  conanfile.py
include/: TauCOM.h  TauCOM.hpp  TauCOM.impl.hpp
scripts/: publish.sh  upload.bat  upload.sh
src/: TauCOM.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
